# fileClaw

./: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
doc/: cursor_project_understanding_and_code_p.md
src/: App.tsx  PluginAPI.ts  TauriBridge.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  fs.rs  git.rs  lib.rs  pty.rs  ssh.rs
src/components/: DeleteConfirmModal.tsx
src/components/layout/: Footer.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
src/components/project/: ProjectSystemsDrawer.tsx
src/components/ssh/: SftpBrowser.tsx  StatusFooter.tsx  Terminal.tsx  TerminalPane.tsx
src/contexts/: AppContext.tsx  ThemeContext.tsx  useWorkspaceStore.ts
src/db/: TauriLowdbAdapter.ts
src/pages/: AccountsPage.tsx  ProjectsPage.tsx  SSHPage.tsx  SettingsPage.tsx  SystemsPage.tsx
src/pages/ChatPage/: index.tsx  types.ts
src/pages/ChatPage/components/: ChatHeader.tsx  ChatInput.tsx  HistoryModal.tsx  MessageList.tsx
src/pages/ProjectTracker/: ProjectTrackerPage.tsx
src/pages/ProjectTracker/components/: ProjectCard.tsx  ProjectModal.tsx
src/pages/Workspace/: WorkspacePage.tsx
src/pages/Workspace/components/: CodeEditor.tsx  DiffTabViewer.tsx  FileExplorer.tsx
src/pages/Workspace/components/git/: BranchesDialog.tsx  CommitDialog.tsx  GitGraphTab.tsx  HistoryDialog.tsx  PullDialog.tsx  PushDialog.tsx  RemotesDialog.tsx  (+2 more)
src/types/: index.ts
src/utils/: copy.ts  fileIcon.tsx  path.ts
